--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,4 +1,10 @@
 <section>
   <h1>Index page</h1>
   <p>html content for home page here</p>
+  <div>
+    <a href="/middleware">middleware</a>
+  </div>
+  <div>
+    <a href="/nomiddleware">nomiddleware</a>
+  </div>
 </section>
